tenants/platform/services/kubernetes-dashboard/postInstall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dashboard.jdwlabs.com
      secretName: kubernetes-dashboard-tls
  rules:
    - host: dashboard.jdwlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-kubernetes-dashboard-kong-proxy
                port:
                  number: 443
